<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_contact">Add New Contact</string>
    <string name="add_contact">Add New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="save">Save Contact</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>


</resources>
