<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--<TextView-->
        <!--android:id="@+id/edit_add_contact"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:text="@string/add_contact"-->
        <!--android:textColor="@color/primary"-->
        <!--android:textSize="34sp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:singleLine="true"
                android:inputType="textCapWords"
                app:iconLeft="@drawable/ic_person"
                app:iconPadding="0dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:inputType="textCapWords"
                app:iconLeft="@drawable/ic_person"
                app:iconPadding="0dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:singleLine="true"
                android:inputType="phone"
                app:iconLeft="@drawable/ic_phone"
                app:iconPadding="0dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                app:iconLeft="@drawable/ic_email_white"
                app:iconPadding="0dp" />

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/button"
                android:onClick="saveContact"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_gravity="end"
                android:background="@color/accent"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
